# bio_bot

./: pyproject.toml
app/: config.py  run.py
app/common/: cmd_list.py  kb_list.py  texts.py
app/database/: dao.py  init.py  models.py
app/filters/: IsAdmin.py
app/handlers/: admin.py  commands.py  portfolio.py  service.py  user_private.py
app/keyboards/: reply.py
app/middlewares/: db.py
